   defines with what brake (the second axis), second arg at what
   value. This will usually be 0.5 for (0,1) or 0 for (-1,1).
   I've added its usage (commented out by default) to most locos.
 - Configs for Soldier Summit and Mannheim - Karlsruhe
 - made GT3 Gas Turbine work, requires repatching
 - Small fixes for A2 Peppercorn and GT3

0.9.1
 - Tried to do UP Gas Turbine config, but the loco is bugged.
 - BR155 config.
 - PowerSelected added to Overlay and as a lever to Gear.
 - Fixes some minor issues for Fifties Steamers.
 - GWR Pannier config.
 - LargeEjector added to the list of joystick controllable axes.
   (it's usable in the Fifties Steamers)
 - Havner's Cofig for steamers moved to one common place

0.9
 - TS2016 (and '17, '18, '19) support.
 - Updated configs and detection for Locos from Sherman Hill,
   Cologne - Koblentz and PennCoal. For the new braking system on
   US locos turn off brake notches (CTRL+SHIFT+3).
 - WARNING: Due to the fact that more and more locos are heavily
   scripted the blue part of the overlay (controls) will now try
   to exclusively show actual lever values, not the internal values
   as original intended. The internals become more and more
   convoluted and meaningless. No point in mantaining that.
 - WARNING: Default for "change direction" changed to "D"
 - WARNING: Configuration syntax changed a little, now tables
            are used everywhere.
            ThrottleInvert became tshInvert["Throttle"], etc.
 - WARNING: Config functions changed due to the above as well.
            ReplaceLines, GenerateEquakNotches, InvInvert, they
            all get the key in params and don't return anything
 - Removed *: from scripts calls as per dev documents
 - Added warning if Simple controls are detected
 - Added an option "S" to switch to speed limit only
 - Added an option to sync controls on start of the sim
 - New option for Axes, Step: set the control over time,
   not immediately. Now even using Notches the ControlValue