@@ -7,6 +7,7 @@
  - Configs for Soldier Summit and Mannheim - Karlsruhe
  - made GT3 Gas Turbine work, requires repatching
  - Small fixes for A2 Peppercorn and GT3
+ - Class 76 (Woodhead)
 
 0.9.1
  - Tried to do UP Gas Turbine config, but the loco is bugged.
